--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 28 23:05:02 2018</p>
+         Last Run: Thu Nov 29 00:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -33,36 +33,36 @@
                         <td>Overcast</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>24</td>
+                        <td>13</td>
                         <td>79</td>
                         <td>0</td>
                         <td>10</td>
                         <td>N</td>
-                        <td>97</td>
+                        <td>98</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Overcast</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>24</td>
+                        <td>22</td>
                         <td>76</td>
                         <td>0</td>
                         <td>11</td>
                         <td>N</td>
-                        <td>97</td>
+                        <td>98</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
                         <td>Overcast</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>24</td>
+                        <td>21</td>
                         <td>77</td>
                         <td>0</td>
-                        <td>10</td>
-                        <td>NNE</td>
-                        <td>97</td>
+                        <td>11</td>
+                        <td>N</td>
+                        <td>98</td>
                      </tr>
                   </tbody>
                </table>
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "24",
-                 "24",
-                 "24"
+                 "13",
+                 "22",
+                 "21"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "97",
-                 "97",
-                 "97"
+                 "98",
+                 "98",
+                 "98"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 28 23:05:02 2018</p>
+         Last Run: Thu Nov 29 00:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -246,8 +246,8 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Overcast</td>
-                        <td>-5</td>
-                        <td>-8</td>
+                        <td>-4</td>
+                        <td>-7</td>
                         <td>24</td>
                         <td>81</td>
                         <td>0</td>
@@ -257,27 +257,27 @@
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Snow Showers</td>
                         <td>-4</td>
                         <td>-7</td>
-                        <td>24</td>
+                        <td>36</td>
                         <td>77</td>
                         <td>0</td>
                         <td>6</td>
                         <td>N</td>
-                        <td>94</td>
+                        <td>95</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Overcast</td>
-                        <td>-4</td>
-                        <td>-7</td>
-                        <td>24</td>
-                        <td>72</td>
+                        <td>Snow Showers</td>
+                        <td>-3</td>
+                        <td>-6</td>
+                        <td>31</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>8</td>
                         <td>N</td>
-                        <td>93</td>
+                        <td>95</td>
                      </tr>
                   </tbody>
                </table>
@@ -304,9 +304,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-8",
                  "-7",
-                 "-7"
+                 "-7",
+                 "-6"
                ]
              },
              {
@@ -316,9 +316,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-5",
                  "-4",
-                 "-4"
+                 "-4",
+                 "-3"
                ]
              }
            ]
@@ -376,8 +376,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "24",
-                 "24",
-                 "24"
+                 "36",
+                 "31"
                ]
              },
              {
@@ -388,7 +388,7 @@
                "data":[
                  "81",
                  "77",
-                 "72"
+                 "73"
                ]
              },
              {
@@ -398,8 +398,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "94",
-                 "94",
-                 "93"
+                 "95",
+                 "95"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 28 23:05:02 2018</p>
+         Last Run: Thu Nov 29 00:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -460,7 +460,7 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>-8</td>
                         <td>-13</td>
                         <td>7</td>
@@ -468,7 +468,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>WNW</td>
-                        <td>34</td>
+                        <td>18</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -476,11 +476,11 @@
                         <td>-9</td>
                         <td>-14</td>
                         <td>6</td>
-                        <td>81</td>
+                        <td>80</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WNW</td>
-                        <td>23</td>
+                        <td>10</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -492,7 +492,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>WNW</td>
-                        <td>17</td>
+                        <td>7</td>
                      </tr>
                   </tbody>
                </table>
@@ -602,7 +602,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "79",
-                 "81",
+                 "80",
                  "83"
                ]
              },
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "34",
-                 "23",
-                 "17"
+                 "18",
+                 "10",
+                 "7"
                ]
              }
            ]
