--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 29 01:05:02 2018</p>
+         Last Run: Thu Nov 29 02:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -33,8 +33,8 @@
                         <td>Overcast</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>13</td>
-                        <td>79</td>
+                        <td>21</td>
+                        <td>77</td>
                         <td>0</td>
                         <td>10</td>
                         <td>N</td>
@@ -45,8 +45,8 @@
                         <td>Overcast</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>22</td>
-                        <td>76</td>
+                        <td>24</td>
+                        <td>74</td>
                         <td>0</td>
                         <td>11</td>
                         <td>N</td>
@@ -57,8 +57,8 @@
                         <td>Overcast</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>21</td>
-                        <td>77</td>
+                        <td>24</td>
+                        <td>76</td>
                         <td>0</td>
                         <td>11</td>
                         <td>N</td>
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "13",
-                 "22",
-                 "21"
+                 "21",
+                 "24",
+                 "24"
                ]
              },
              {
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "79",
-                 "76",
-                 "77"
+                 "77",
+                 "74",
+                 "76"
                ]
              },
              {
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 29 01:05:02 2018</p>
+         Last Run: Thu Nov 29 02:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -260,7 +260,7 @@
                         <td>Snow Showers</td>
                         <td>-5</td>
                         <td>-9</td>
-                        <td>36</td>
+                        <td>35</td>
                         <td>80</td>
                         <td>0</td>
                         <td>8</td>
@@ -269,15 +269,15 @@
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Snow Showers</td>
+                        <td>Overcast</td>
                         <td>-4</td>
                         <td>-7</td>
-                        <td>34</td>
+                        <td>22</td>
                         <td>75</td>
                         <td>0</td>
                         <td>8</td>
                         <td>N</td>
-                        <td>96</td>
+                        <td>97</td>
                      </tr>
                   </tbody>
                </table>
@@ -376,8 +376,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "24",
-                 "36",
-                 "34"
+                 "35",
+                 "22"
                ]
              },
              {
@@ -399,7 +399,7 @@
                "data":[
                  "95",
                  "96",
-                 "96"
+                 "97"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 29 01:05:02 2018</p>
+         Last Run: Thu Nov 29 02:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -464,23 +464,23 @@
                         <td>-10</td>
                         <td>-14</td>
                         <td>7</td>
-                        <td>81</td>
-                        <td>0</td>
-                        <td>8</td>
-                        <td>W</td>
-                        <td>21</td>
-                     </tr>
-                     <tr>
-                        <td>10:00 PM</td>
-                        <td>Clear</td>
-                        <td>-10</td>
-                        <td>-14</td>
-                        <td>6</td>
                         <td>82</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>12</td>
+                        <td>22</td>
+                     </tr>
+                     <tr>
+                        <td>10:00 PM</td>
+                        <td>Clear</td>
+                        <td>-11</td>
+                        <td>-16</td>
+                        <td>6</td>
+                        <td>83</td>
+                        <td>0</td>
+                        <td>8</td>
+                        <td>W</td>
+                        <td>16</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -488,11 +488,11 @@
                         <td>-11</td>
                         <td>-16</td>
                         <td>6</td>
-                        <td>85</td>
+                        <td>86</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>9</td>
+                        <td>12</td>
                      </tr>
                   </tbody>
                </table>
@@ -520,7 +520,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-14",
-                 "-14",
+                 "-16",
                  "-16"
                ]
              },
@@ -532,7 +532,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-10",
-                 "-10",
+                 "-11",
                  "-11"
                ]
              }
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "81",
                  "82",
-                 "85"
+                 "83",
+                 "86"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "21",
-                 "12",
-                 "9"
+                 "22",
+                 "16",
+                 "12"
                ]
              }
            ]
